# bansuk-api-bot

./: .gitignore  README.md  pyproject.toml  sermons.json
.github/: send_qt.yaml
.github/workflows/: send-qt.yaml  test-send-qt.yaml
bansuk_bot/: schemas.py
bansuk_bot/clients/: union.py  youtube.py
clients/: akkabae.py  qt.py  union.py  youtube.py
scripts/: selmon_crawler.py  send_message.py
tests/: send_test.py
