[tool.poetry]
name = "bansuk-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bansuk_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.81.0"
pydantic = "^1.10.6"
httpx = "^0.23.3"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
